- various fixes and changes
